// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`shaker should carefully shake used exports 1`] = `
""use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.__wywPreval = void 0;
const activeClass = "s1gxjcbn";
const _exp = /*#__PURE__*/() => activeClass;
const __wywPreval = exports.__wywPreval = {
  _exp: _exp
};"
`;

exports[`shaker should remove enum 1`] = `
""use strict";

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.__wywPreval = void 0;
const _exp2 = /*#__PURE__*/() => "t2nn9pk";
const __wywPreval = exports.__wywPreval = {
  _exp2: _exp2
};"
`;
